--- a/src/main/resources/templates/casTwoFactorLoginView.html
+++ b/src/main/resources/templates/casTwoFactorLoginView.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{cas.twofactor.pagetitle}"></title>
+    <title th:text="#{screen.twofactor.pagetitle}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
-
 </head>
 
 <body class="login mdc-typography">
