--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -147,7 +147,7 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (buttonCustomization='button-osf-green', messageKey='screen.welcome.button.login')" />
+                    <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-green', messageKey='screen.welcome.button.login')" />
 
                 </form>
 
@@ -157,13 +157,13 @@
 
                 <script type="text/javascript" th:inline="javascript">
                     /*<![CDATA[*/
-                    var i = /*[[@{#{screen.welcome.button.loginwip}}]]*/
-                    var j = /*[[@{#{screen.welcome.button.login}}]]*/
-                        /*]]>*/
-                        $(window).on('pageshow', function () {
-                            $(':submit').prop('disabled', false);
-                            $(':submit').attr('value', j);
-                        });
+                        var i = /*[[@{#{screen.welcome.button.loginwip}}]]*/
+                        var j = /*[[@{#{screen.welcome.button.login}}]]*/
+                    /*]]>*/
+                    $(window).on('pageshow', function () {
+                        $(':submit').prop('disabled', false);
+                        $(':submit').attr('value', j);
+                    });
                     $(document).ready(function () {
                         $("#fm1").submit(function () {
                             $(":submit").attr("disabled", true);
