--- a/src/main/resources/templates/fragments/totploginform.html
+++ b/src/main/resources/templates/fragments/totploginform.html
@@ -73,7 +73,7 @@
                                 th:accesskey="#{screen.welcome.label.email.accesskey}"
                                 th:value="${@casThymeleafLoginFormDirector.getLoginFormUsername(#vars)}"
                                 autocomplete="off" />
-                            <label for="username" class="mdc-floating-label" th:utext="#{screen.welcome.label.email}"></label>
+                            <label for="username" class="mdc-floating-label" th:utext="#{screen.twofactor.label.email}"></label>
                         </div>
                     </section>
 
@@ -111,7 +111,7 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (buttonCustomization='button-osf-green', messageKey='screen.twofactor.button.verify')" />
+                    <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-green', messageKey='screen.twofactor.button.verify')" />
 
                     <div class="form-button">
                         <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=${osfUrl.logout})}">
@@ -129,13 +129,13 @@
 
                 <script type="text/javascript" th:inline="javascript">
                     /*<![CDATA[*/
-                    var i = /*[[@{#{screen.twofactor.button.loginwip}}]]*/
-                    var j = /*[[@{#{screen.twofactor.button.login}}]]*/
-                        /*]]>*/
-                        $(window).on('pageshow', function () {
-                            $(':submit').prop('disabled', false);
-                            $(':submit').attr('value', j);
-                        });
+                        var i = /*[[@{#{screen.twofactor.button.verifywip}}]]*/
+                        var j = /*[[@{#{screen.twofactor.button.verify}}]]*/
+                    /*]]>*/
+                    $(window).on('pageshow', function () {
+                        $(':submit').prop('disabled', false);
+                        $(':submit').attr('value', j);
+                    });
                     $(document).ready(function () {
                         $("#fm1").submit(function () {
                             $(":submit").attr("disabled", true);
