--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -157,8 +157,8 @@
 
                 <script type="text/javascript" th:inline="javascript">
                     /*<![CDATA[*/
-                        var i = /*[[@{#{screen.welcome.button.loginwip}}]]*/
-                        var j = /*[[@{#{screen.welcome.button.login}}]]*/
+                        var i = /*[[@{#{screen.generic.button.wip}}]]*/ 'One moment please...' ;
+                        var j = /*[[@{#{screen.welcome.button.login}}]]*/ 'Sign in' ;
                     /*]]>*/
                     $(window).on('pageshow', function () {
                         $(':submit').prop('disabled', false);
