Redesign the support links
* Removed the pmlink fragment
* Added right-floating password and sign-in support links
  under the sign-in button
* Moved left-floating remember-me checkbox to under the
  sign-in button in the same section of the support links

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -900,6 +900,19 @@ body {
     display: none;
 }
 
+.cas-field-col-2 {
+    margin-top: 1rem!important;
+    margin-bottom: 1.5rem!important;
+}
+
+.cas-field-float-left {
+    float: left;
+}
+
+.cas-field-float-right {
+    float: right;
+}
+
 .cas-footer-osf {
     text-align: center;
 }
